fixed when navbar collapses, imported Bootstrap's js, basic carousel images added

--- a/eggstagram/src/index.css
+++ b/eggstagram/src/index.css
@@ -1,89 +1,3 @@
-.navbar-custom {
-    background-color: #2774AE;
-}
-
-.navbar-text {
-    color: white;
-}
-
-.signIn {
-    max-width: 300px;
-    margin: auto;
-}
-
 .webBackgroundColor {
     background-color: #FFD100;
-}
-
-.signUpButton {
-    background-color: #8BB8E8;
-}
-
-@media(min-width: 768px) {
-    .news-input {
-        width: 50%;
-    }
-}
-
-.newsletterFontSize {
-    font-size: 1.4em;
-}
-
-/*row of 5 columns for the 5 pictures*/
-.col-xs-15,
-.col-sm-15,
-.col-md-15,
-.col-lg-15 {
-    position: relative;
-    min-height: 1px;
-    padding-right: 10px;
-    padding-left: 10px;
-}
-
-.col-xs-15 {
-    width: 20%;
-    float: left;
-}
-@media (min-width: 768px) {
-.col-sm-15 {
-        width: 20%;
-        float: left;
-    }
-}
-@media (min-width: 992px) {
-    .col-md-15 {
-        width: 20%;
-        float: left;
-    }
-}
-@media (min-width: 1200px) {
-    .col-lg-15 {
-        width: 20%;
-        float: left;
-    }
-}
-
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
-
-.whiteSection{
-    background-color: white;
-}
-
-.whiteSectionText{
-    color: black;
-}
-
-/*ghost element, so that body can be pushed down when making navbar fixed*/
-body::before {
-    display: block;
-    content: '';
-    height: 60px;
-}
-
-.newsletter-custom {
-    background-color: #2774AE;
-}
-
-.newsletter-text {
-    color: white;
 }
